combine data into json format

--- a/notebook_templates/task1_xxxxxxx.ipynb
+++ b/notebook_templates/task1_xxxxxxx.ipynb
@@ -554,6 +554,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_txt_json = []\n",
+    "for i in range(15):\n",
+    "    with open (f'Sample inpu/sample_input_{i}.txt', 'r', encoding='utf-8') as file:\n",
+    "        text = file.read()\n",
+    "        #segment by review:\n",
+    "        pattern = re.compile(r'<record>(.*?)</record>', re.DOTALL | re.IGNORECASE)\n",
+    "\n",
+    "        # Find all matches\n",
+    "        matches = pattern.findall(text)\n",
+    "\n",
+    "        reviews = matches \n",
+    "\n",
+    "        for review in reviews:\n",
+    "            review_json = {}\n",
+    "            #gmap id \n",
+    "            pattern = re.compile(r'(?:<\\s?(?:gmapid|gmap_id)>\\s*?)(.*?)(?:<)', re.IGNORECASE)\n",
+    "            gmap_id_matches = pattern.findall(review)\n",
+    "            if len(gmap_id_matches) > 1:\n",
+    "                print(\"ERROR\")      \n",
+    "            #user id\n",
+    "            pattern = re.compile(r'(?:<\\s?(?:userid|user_id|user)\\.?>\\s?)(\\d*?)(?:<)', re.IGNORECASE)\n",
+    "            user_id_matches = pattern.findall(review)\n",
+    "            if len(gmap_id_matches) > 1:\n",
+    "                print(\"ERROR\") \n",
+    "            #\n",
+    "\n",
+    "            review_json = {\"gmap_id\" : gmap_id_matches[0],\n",
+    "                        \"reviews\" : [\n",
+    "                        ]}\n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "X1m7-oIfiqK_"
    },
