--- a/notebook_templates/task2_xxxxxxx.ipynb
+++ b/notebook_templates/task2_xxxxxxx.ipynb
@@ -76,6 +76,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "bSr_kwKclDEV"
@@ -103,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "qgmGWs8HlDEW"
    },
@@ -146,14 +153,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "id": "bPCuEl8smTHW"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(176, 4)\n",
+      "(124, 5)\n",
+      "                                 gmap_id  \\\n",
+      "0  0x54cde72868493ca5:0x3bed623bec4c43e3   \n",
+      "1  0x808327b71461d6bb:0x7e1165558a98f648   \n",
+      "2  0x8083ff64283d3aab:0x278c940d94dac24d   \n",
+      "3  0x8084481ecb286ce3:0x9621a5cee38c4ec2   \n",
+      "4   0x80844820b85359e3:0xff414747a10c915   \n",
+      "\n",
+      "                                             reviews             earliest  \\\n",
+      "0  [{'user_id': '105000072505849868207', 'time': ...  2011-02-04 08:53:51   \n",
+      "1  [{'user_id': '107657303729293182646', 'time': ...  2017-03-19 03:42:30   \n",
+      "2  [{'user_id': '102483909621418254915', 'time': ...  2010-11-22 08:52:43   \n",
+      "3  [{'user_id': '103560060345361578357', 'time': ...  2013-08-01 09:19:36   \n",
+      "4  [{'user_id': '107735448526067964417', 'time': ...  2013-08-13 10:06:50   \n",
+      "\n",
+      "                latest                                        review_text  \n",
+      "0  2021-04-21 20:51:39  was really good.   the pizza, cheese bread and...  \n",
+      "1  2021-06-18 00:16:39  really cool place.. very clean with kind peopl...  \n",
+      "2  2021-04-20 00:45:20  this place has always been awesome! very frien...  \n",
+      "3  2021-08-21 08:04:27  transco is always professional and great to wo...  \n",
+      "4  2021-05-22 07:37:44  was there just before opening at 8:45 am.  wen...  \n"
+     ]
+    }
+   ],
    "source": [
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')"
+    "df = pd.read_json(\"task1_30.json\")\n",
+    "df = df.T.reset_index() \n",
+    "df.columns = ['gmap_id', 'reviews', 'earliest', 'latest'] \n",
+    "\n",
+    "print(df.shape)\n",
+    "def extract_reviews(df):\n",
+    "    df = df[df['reviews'].apply(len) >= 70].reset_index(drop=True)\n",
+    "    df['review_text'] = ''\n",
+    "    for index, row in df.iterrows():\n",
+    "        review_texts = []\n",
+    "        for review in row['reviews']:\n",
+    "            text = review.get('review_text', '').lower()\n",
+    "            # text = re.sub(r'[^\\x00-\\x7F]+', '', text)\n",
+    "            review_texts.append(text)\n",
+    "        df.at[index, 'review_text'] = ' '.join(review_texts)\n",
+    "    print(df.shape)\n",
+    "    return df\n",
+    "\n",
+    "output_df = extract_reviews(df)\n",
+    "print(output_df.head())\n"
    ]
   },
   {
@@ -602,7 +656,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.4"
   },
   "toc": {
    "base_numbering": 1,
