vocab roughly done

--- a/notebook_templates/task2_xxxxxxx.ipynb
+++ b/notebook_templates/task2_xxxxxxx.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {
     "id": "qgmGWs8HlDEW"
    },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {
     "id": "bPCuEl8smTHW"
    },
@@ -206,9 +206,14 @@
     "    print(df.shape)\n",
     "    return df\n",
     "\n",
-    "output_df = extract_reviews(df)\n",
-    "print(output_df.head())\n"
+    "df_review = extract_reviews(df)\n",
+    "print(df_review.head())\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -221,14 +226,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "id": "RyLbqkRxmCEZ"
    },
-   "outputs": [],
-   "source": [
-    "#some code"
-   ]
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['was', 'really', 'good', 'the', 'pizza', 'cheese', 'bread', 'and', 'cinnamon', 'bread', 'were', 'all', 'excellent', 'it', 's', 'okay', 'but', 'there', 'seems', 'to', 'be', 'less', 'toppings', 'on', 'the', 'pizza', 'the', 'last', 'time', 'we', 'were', 'there', 'they', 'didn', 't', 'have', 'dressings', 'for', 'their', 'salads', 'the', 'employees', 'are', 'great', 'though', 'because', 'this', 'place', 'is', 'great', 'dylan', 'has', 'thee', 'best', 'customer', 'service', 'i', 'believe', 'i', 've', 'ever', 'came', 'across', 'the', 'pizza', 'is', 'great', 'every', 'time', 'well', 'worth', 'the', 'visit', 'online', 'ordering', 'and', 'in', 'store', 'pickup', 'is', 'fast', 'and', 'easy', 'love', 'the', 'pizza', 'combinations', 'and', 'great', 'food', 'staff', 'is', 'always', 'polite', 'my', 'experience', 'last', 'night', 'was', 'less', 'than', 'preferable', 'went', 'in', 'today', 'and', 'the', 'manager', 'made', 'it', 'right', 'by', 'me', 'love', 'this', 'place', 'very', 'well', 'kept', 'and', 'welcoming', 'spot', 'they', 'serve', 'large', 'portions', 'and', 'for', 'affordable', 'prices', 'i', 'enjoyed', 'the', 'meals', 'very', 'much', 'and', 'the', 'waiters', 'were', 'very', 'amiable', 'and', 'chatty', 'i', 'recommend', 'this', 'place', 'this', 'place', 'has', 'the', 'most', 'awesome', 'crew', 'always', 'friendly', 'knowledgeable', 'quick', 'and', 'efficient', 'the', 'menu', 'is', 'great', 'my', 'favorite', 'i', 'll', 'get', 'heck', 'for', 'it', 'i', 'm', 'sure', 'the', 'hawaiian', 'with', 'creamy', 'garlic', 'sauce', 'instead', 'of', 'red', 'sauce', 'i', 've', 'always', 'received', 'superb', 'service', 'and', 'if', 'by', 'chance', 'someone', 'doesn', 't', 'i', 'm', 'sorry', 'but', 'i', 'highly', 'recommend', 'this', 'restaurant', 'ps', 'take', 'n', 'bake', 'means', 'you', 'have', 'to', 'cook', 'awesome', 'costumer', 'service', 'great', 'place', 'to', 'get', 'a', 'pizza', 'and', 'feed', 'all', 'the', 'kids', 'at', 'a', 'reasonable', 'price', 'it', 'takes', 'about', 'min', 'for', 'them', 'to', 'prepare', 'your', 'order', 'so', 'you', 'have', 'to', 'make', 'sure', 'to', 'keep', 'that', 'in', 'mind', 'when', 'organizing', 'a', 'pizza', 'order', 'they', 'offer', 'daily', 'and', 'weekly', 'specials', 'which', 'is', 'always', 'nice', 'we', 'like', 'a', 'great', 'deal', 'they', 'even', 'offer', 'cookie', 'dough', 'a', 'fresh', 'salads', 'to', 'add', 'to', 'your', 'pizza', 'my', 'favorite', 'is', 'the', 'chicken', 'bacon', 'artichoke', 'pizza', 'greatest', 'place', 'around', 'the', 'employees', 'especially', 'dylan', 'are', 'incredibly', 'helpful', 'and', 'always', 'smiling', 'always', 'consistent', 'with', 'weekly', 'deals', 'pizzas', 'are', 'good', 'even', 'better', 'because', 'they', 'are', 'cooked', 'in', 'your', 'own', 'oven', 'this', 'place', 'is', 'great', 'the', 'staff', 'is', 'fast', 'and', 'the', 'manager', 'is', 'top', 'notch', 'great', 'price', 'great', 'food', 'stars', 'all', 'the', 'way', 'the', 'pizza', 'is', 'good', 'fast', 'service', 'good', 'pizza', 'and', 'friendly', 'staff', 'papa', 'murphy', 's', 'is', 'our', 'favorite', 'way', 'to', 'do', 'pizza', 'like', 'to', 'the', 'selection', 'around', 'ability', 'to', 'customize', 'service', 'is', 'usually', 'faster', 'than', 'promised', 'love', 'it', 'great', 'place', 'for', 'quick', 'and', 'easy', 'take', 'and', 'bake', 'pizza', 'the', 'staff', 'are', 'young', 'and', 'pleasant', 'i', 'have', 'been', 'to', 'quite', 'a', 'few', 'papa', 'murphy', 's', 'but', 'this', 'one', 'is', 'definitely', 'the', 'best', 'friendly', 'crew', 'that', 'are', 'very', 'welcoming', 'and', 'work', 'very', 'quickly', 'and', 'promptly', 'and', 'the', 'salads', 'were', 'surprisingly', 'good', 'we', 'get', 'pizza', 'and', 'salad', 'weekly', 'from', 'here', 'this', 'location', 'by', 'far', 'is', 'the', 'worst', 'i', 'guess', 'when', 'there', 'are', 'not', 'many', 'options', 'around', 'you', 'can', 'get', 'away', 'with', 'selling', 'thrown', 'together', 'slop', 'new', 'management', 'and', 'customer', 'service', 'would', 'go', 'a', 'long', 'way', 'here', 'always', 'great', 'service', 'and', 'bargains', 'great', 'cheap', 'pizza', 'i', 'would', 'give', 'them', 'higher', 'rating', 'if', 'they', 'could', 'manage', 'to', 'have', 'my', 'order', 'ready', 'on', 'time', 'every', 'single', 'time', 'they', 'are', 'at', 'least', 'ten', 'minutes', 'behind', 'if', 'it', 'wasn', 't', 'such', 'a', 'great', 'deal', 'i', 'would', 'never', 'go', 'back', 'these', 'folks', 'are', 'amazing', 'fun', 'and', 'make', 'the', 'best', 'pizza', 'plus', 'they', 'have', 'gluten', 'free', 'options', 'that', 'are', 'superb', 'we', 'went', 'in', 'at', 'this', 'morning', 'we', 'were', 'the', 'first', 'ones', 'in', 'the', 'door', 'they', 'didn', 't', 'listen', 'about', 'what', 'was', 'wanted', 'on', 'the', 'pizza', 'they', 'were', 'rude', 'we', 'asked', 'for', 'the', 'tuesday', 'we', 'asked', 'for', 'extra', 'cheese', 'and', 'got', 'ignored', 'we', 'left', 'for', 'mins', 'at', 'the', 'most', 'went', 'back', 'to', 'the', 'store', 'and', 'saw', 'someone', 'else', 'coming', 'out', 'with', 'his', 'pizza', 'when', 'we', 'got', 'back', 'into', 'the', 'store', 'i', 'was', 'saying', 'how', 'we', 'were', 'there', 'first', 'and', 'how', 'come', 'our', 'pizza', 'wasn', 't', 'even', 'ready', 'and', 'waiting', 'i', 'thought', 'that', 'papa', 'murphy', 's', 'was', 'supposed', 'to', 'be', 'a', 'great', 'take', 'and', 'bake', 'the', 'people', 'who', 'work', 'there', 'suck', 'always', 'friendly', 'staff', 'good', 'ready', 'to', 'bake', 'pizzas', 'so', 'convenient', 'it', 'is', 'a', 'treat', 'to', 'have', 'a', 'piping', 'hot', 'pizza', 'from', 'your', 'own', 'oven', 'that', 'is', 'ready', 'when', 'you', 'are', 'they', 'have', 'delicious', 'pizza', 'of', 'course', 'but', 'the', 'half', 'a', 'have', 'cheese', 'and', 'spinach', 'with', 'mushrooms', 'yumminess', 'great', 'food', 'on', 'vacation', 'good', 'pizza', 'very', 'good', 'pizza', 'and', 'very', 'consistent', 'i', 've', 'always', 'had', 'a', 'good', 'experience', 'there', 'enjoy', 'chatting', 'with', 'nice', 'employees', 'while', 'waiting', 'and', 'the', 'pizza', 'is', 'always', 'great', 'the', 'service', 'here', 'was', 'sub', 'par', 'at', 'the', 'best', 'we', 'called', 'a', 'and', 'made', 'an', 'order', 'for', 'our', 'pizza', 'we', 'were', 'told', 'it', 'would', 'be', 'ready', 'in', 'min', 'the', 'online', 'time', 'says', 'the', 'store', 'closes', 'at', 'so', 'we', 'stopped', 'and', 'got', 'gas', 'first', 'as', 'we', 'arrive', 'it', 'is', 'mind', 'you', 'i', 'say', 'can', 'i', 'get', 'my', 'pizza', 'they', 'tell', 'me', 'sorry', 'we', 'r', 'closed', 'long', 'story', 'short', 'fix', 'the', 'times', 'online', 'today', 'they', 'were', 'a', 'little', 'confused', 'in', 'the', 'store', 'seemed', 'like', 'everyone', 'was', 'a', 'new', 'employee', 'getting', 'orders', 'confused', 'i', 'm', 'hoping', 'our', 'next', 'experience', 'is', 'better', 'i', 'love', 'this', 'place', 'and', 'would', 'love', 'to', 'come', 'back', 'as', 'long', 'as', 'stuff', 'gets', 'worked', 'out', 'picked', 'up', 'some', 'pizzas', 'always', 'great', 'service', 'and', 'good', 'pizza', 'staff', 'is', 'always', 'pleasant', 'orders', 'from', 'phone', 'are', 'most', 'always', 'ready', 'for', 'you', 'if', 'you', 'call', 'in', 'or', 'order', 'online', 'service', 'is', 'faster', 'service', 'is', 'usually', 'pretty', 'good', 'and', 'friendly', 'their', 'service', 'is', 'great', 'the', 'best', 'is', 'when', 'you', 'order', 'online', 'they', 'are', 'prompt', 'and', 'very', 'friendly', 'great', 'customer', 'service', 'from', 'rachel', 'she', 'greeted', 'us', 'as', 'we', 'walked', 'in', 'and', 'told', 'us', 'the', 'specials', 'while', 'she', 'kept', 'pace', 'filling', 'the', 'order', 'she', 'was', 'working', 'on', 'when', 'we', 'came', 'in', 'rachel', 'was', 'friendly', 'and', 'personable', 'and', 'had', 'a', 'wonderful', 'attitude', 'the', 'store', 'was', 'clean', 'and', 'the', 'premise', 'case', 'was', 'full', 'cheap', 'pizza', 'not', 'always', 'the', 'greatest', 'pay', 'more', 'and', 'get', 'better', 'it', 's', 'pizza', 'in', 'mt', 'shasta', 'u', 'may', 'or', 'may', 'not', 'get', 'heart', 'burn', 'but', 'it', 's', 'worth', 'the', 'gamble', 'am', 'i', 'right', 'great', 'food', 'and', 'service', 'always', 'have', 'order', 'ready', 'on', 'time', 'when', 'ordering', 'online', 'pleasant', 'staff', 'gluten', 'free', 'pizza', 'options', 'as', 'well', 'as', 'salads', 'cheese', 'breads', 'and', 'even', 'various', 'cookie', 'doughs', 'best', 'place', 'to', 'make', 'a', 'cheap', 'version', 'of', 'round', 'table', 's', 'italian', 'garlic', 'supreme', 'worst', 'pizza', 'i', 'ever', 'had', 'the', 'thin', 'crust', 'was', 'not', 'even', 'like', 'pizza', 'crust', 'the', 'best', 'take', 'and', 'bake', 'pizza', 'in', 'town', 'great', 'place', 'to', 'get', 'a', 'take', 'and', 'bake', 'and', 'good', 'customer', 'service', 'quick', 'serve', 'and', 'a', 'good', 'product', 'what', 'isn', 't', 'to', 'love', 'about', 'a', 'wrll', 'made', 'pizza', 'to', 'take', 'home', 'and', 'cook', 'i', 'always', 'get', 'good', 'service', 'here', 'good', 'pizza', 'inexpensive', 'the', 'manager', 'is', 'great', 'food', 'is', 'good', 'fast', 'i', 'mean', 'it', 's', 'papa', 'murphy', 's', 'delicious', 'and', 'cheap', 'and', 'they', 'get', 'their', 'veggies', 'from', 'propacific', 'cheap', 'and', 'delicious', 'home', 'baked', 'pizzas', 'friendly', 'staff', 'quality', 'and', 'care', 'has', 'gone', 'downhill', 'unfortunately', 'very', 'good', 'pizza', 'for', 'the', 'price', 'great', 'prices', 'love', 'the', 'tuesday', 'special', 'good', 'pizza', 'always', 'ordered', 'over', 'the', 'phone', 'and', 'always', 'had', 'my', 'pizza', 'ready', 'by', 'the', 'time', 'i', 'got', 'there', 'always', 'did', 'special', 'orders', 'too', 'and', 'never', 'missed', 'an', 'order', 'item', 'once', 'oder', 'before', 'you', 'get', 'their', 'or', 'don', 't', 'be', 'surprised', 'to', 'wait', 'minutes', 'because', 'others', 'ordered', 'over', 'the', 'phone', 'ahead', 'of', 'you', 'friendly', 'fast', 'service', 'i', 'love', 'love', 'love', 'love', 'love', 'love', 'this', 'place', 'bomb', 'love', 'take', 'n', 'bake', 'love', 'there', 'pizza', 'didn', 't', 'know', 'that', 'you', 'had', 'to', 'bake', 'it', 'i', 'was', 'camping', 'fresh', 'ingredients', 'always', 'good', 'yummy', 'so', 'dirty', 'i', 'didn', 't', 'want', 'the', 'nice', 'pizza', 's', 'it', 'is', 'take', 'and', 'bake', 'what', 'else', 'can', 'i', 'say', 'its', 'always', 'good', 'pizza', 'just', 'go', 'through', 'the', 'street', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none', 'none']\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -346,13 +357,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
     "id": "p8zT4N0RlDEf"
    },
    "outputs": [],
    "source": [
-    "#some code\n"
+    "#some code\n",
+    "for index,row in df_review.iterrows():\n",
+    "    # Tokenization\n",
+    "    review_text = row[\"review_text\"]\n",
+    "    tokenizer = RegexpTokenizer(r\"[a-zA-Z]+\")\n",
+    "    unigram_tokens = tokenizer.tokenize(review_text)\n",
+    "\n",
+    "    # Remove tokens less than three\n",
+    "    unigram_tokens = [token for token in unigram_tokens if len(token) >= 3]\n",
+    "\n",
+    "    # Retokenize for multi word\n",
+    "    bigrams = ngrams(unigram_tokens, n = 2)\n",
+    "    fdbigram = FreqDist(bigrams)\n",
+    "    fdbigram.most_common()\n",
+    "    bigram_measures = nltk.collocations.BigramAssocMeasures()\n",
+    "    finder = nltk.collocations.BigramCollocationFinder.from_words(unigram_tokens)\n",
+    "    bigram_token = finder.nbest(bigram_measures.pmi, 201)\n",
+    "    tokenizer = MWETokenizer(bigram_token)\n",
+    "    mwe_tokens = tokenizer.tokenize(unigram_tokens)\n",
+    "    # print(mwe_tokens)\n",
+    "\n",
+    "    # Remove independent stop words\n",
+    "    stopwords_list = []\n",
+    "    with open(r'Student Data/stopwords_en.txt', 'r') as file:\n",
+    "        for line in file:\n",
+    "            stopwords_list.append(line.strip())\n",
+    "    stopped_tokens = [w for w in mwe_tokens if w not in stopwords_list]\n",
+    "\n",
+    "    # Stem words\n",
+    "    stemmer = PorterStemmer()\n",
+    "    stemed_tokens = [stemmer.stem(token) for token in stopped_tokens]\n",
+    "\n",
+    "    df_review.at[index, \"tokennized_review\"] = stemed_tokens\n",
+    "\n",
+    "\n",
+    "# print(df_review.head())\n",
+    "\n",
+    "# Remove context dependent and rare word\n",
+    "word_in_business = {}\n",
+    "total_businesses = df_review.shape[0]\n",
+    "\n",
+    "for index, row in df_review.iterrows():\n",
+    "    gmap_id = row['gmap_id']\n",
+    "    unique_words = set(row['tokennized_review'])\n",
+    "    for word in unique_words:\n",
+    "        if word not in word_in_business:\n",
+    "            word_in_business[word] = set()\n",
+    "        word_in_business[word].add(gmap_id)\n",
+    "\n",
+    "rare_context_dependent_stopwords = [word for word, business_set in word_in_business.items()\n",
+    "                                if len(business_set) / total_businesses > 0.95 or len(business_set) / total_businesses < 0.05]\n",
+    "\n",
+    "for index,row in df_review.iterrows():\n",
+    "    cleaned_tokens = [w for w in row['tokennized_review'] if w not in rare_context_dependent_stopwords]\n",
+    "    df_review.at[index, \"tokennized_review\"] = cleaned_tokens\n",
+    "\n",
+    "# print(df_review.head())\n",
+    "\n",
+    "# Export word count txt file\n",
+    "all_tokens = sum(df_review[\"tokennized_review\"], [])\n",
+    "unique_vocab = set(all_tokens)\n",
+    "sorted_unique_vocab = sorted(unique_vocab)\n",
+    "with open(\"test_vocab.txt\",'w') as file:\n",
+    "    for index,word in enumerate(sorted_unique_vocab):\n",
+    "        file.write(f\"{word}:{index}\\n\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -372,7 +455,7 @@
    },
    "outputs": [],
    "source": [
-    "#some code"
+    "#Remove"
    ]
   },
   {
