task 2 ouput file fixed again

--- a/notebook_templates/task2_xxxxxxx.ipynb
+++ b/notebook_templates/task2_xxxxxxx.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 84,
    "metadata": {
     "id": "qgmGWs8HlDEW"
    },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 85,
    "metadata": {
     "id": "bPCuEl8smTHW"
    },
@@ -303,19 +303,21 @@
       "174  2021-05-26 22:32:14  \n",
       "175  2021-06-09 07:25:32  \n",
       "\n",
-      "[176 rows x 4 columns]\n"
+      "[176 rows x 4 columns]\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_json(\"task1_sample_30.json\")\n",
+    "df = pd.read_json(\"task1_30.json\")\n",
     "print(df)\n",
     "df = df.T.reset_index() \n",
     "df.columns = ['gmap_id', 'reviews', 'earliest', 'latest'] \n",
     "print(df)\n",
     "for index, row in df.iterrows():\n",
     "    filtered_reviews = [review for review in row[\"reviews\"] if review.get(\"review_text\") != \"None\"]\n",
-    "    df.at[index, \"reviews\"] = filtered_reviews"
+    "    df.at[index, \"reviews\"] = filtered_reviews\n",
+    "print()"
    ]
   },
   {
@@ -353,11 +355,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 86,
    "metadata": {
     "id": "YsnRR2c4lDEc"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(176, 4)\n",
+      "(78, 5)\n"
+     ]
+    }
+   ],
    "source": [
     "print(df.shape)\n",
     "def extract_reviews(df):\n",
@@ -382,7 +393,7 @@
     "id": "-uh9oUXAlDEd"
    },
    "source": [
-    "After dropping all the review_text which is \"None\", I filtered the review by whose \"reviews\" list has more than 70 elements."
+    "After dropping all the review_text which is \"None\", I filtered the review by whose \"reviews\" list has more than 70 elements by applying len() method. After filtering the reviews, I created a new dataframe to store them. After that, a for loop is used to iterate through each row of the new data frame to store the review text to a new column \"review_text\". And then, join the review_text list to a string for further tokenization."
    ]
   },
   {
@@ -408,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,14 +439,38 @@
     "\n",
     "    # Remove independent stop words\n",
     "    stopped_tokens = [w for w in unigram_tokens if w not in stopwords_list]\n",
-    "\n",
     "    #Stemming\n",
     "    stemmer = PorterStemmer()\n",
     "    stemed_tokens = [stemmer.stem(token) for token in stopped_tokens]\n",
     "    df_review.at[index, \"tokennized_review\"] = stemed_tokens\n",
-    "    # print(mwe_tokens)\n",
-    "\n",
-    "# Remove context dependent and rare word\n",
+    "    # print(mwe_tokens)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "ZqZos1q6lDEf"
+   },
+   "source": [
+    "1.Read the stopwords txt and append them to a list called stopwords_lis\n",
+    "2.Iterate through the rows of df_reviews\n",
+    "3.Task a finished: Tokenize the review_text of each row by RegexpTokenizer\n",
+    "Justification: To perform further processing like remove stop words, Stemmentization etc, Words need to be tokenized first.\n",
+    "4.Task e finished: Used list comprehension to  filter out the tokens to be length longer than3\n",
+    "Justification: Words's Lenth less than 3 are always meanningless words. Remove than at the beginning can help improve efficency of data processing.\n",
+    "5.Task b1 finishied: Used list comprehension to filter the unigram_tokens by word not in the stop_word list.\n",
+    "Justification: To"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "OPBNTTq6lDEg"
+   },
+   "outputs": [],
+   "source": [
+    "# Remove context dependent stopwords\n",
     "word_in_business = {}\n",
     "total_businesses = df_review.shape[0]\n",
     "\n",
@@ -447,13 +482,55 @@
     "            word_in_business[word] = set()\n",
     "        word_in_business[word].add(gmap_id)\n",
     "\n",
-    "rare_context_dependent_stopwords = [word for word, business_set in word_in_business.items()\n",
-    "                                if len(business_set) / total_businesses > 0.95 or len(business_set) / total_businesses < 0.05]\n",
+    "context_dependent_stopwords = [word for word, business_set in word_in_business.items()\n",
+    "                                if len(business_set) / total_businesses > 0.95]\n",
     "\n",
     "for index,row in df_review.iterrows():\n",
-    "    cleaned_tokens = [w for w in row['tokennized_review'] if w not in rare_context_dependent_stopwords]\n",
-    "    df_review.at[index, \"tokennized_review\"] = cleaned_tokens\n",
+    "    stopped_tokens = [w for w in row['tokennized_review'] if w not in context_dependent_stopwords]\n",
+    "    df_review.at[index, \"tokennized_review\"] = stopped_tokens\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.Identifying and removing context-dependent stopwords, which are words that appear in more than 95% of businesses.\n",
+    "Justification: This step should be done before the stemming because \n",
+    "2.Stemming the remaining tokens to their root forms using the Porter Stemmer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove rare words\n",
+    "word_in_business = {}\n",
+    "total_businesses = df_review.shape[0]\n",
     "\n",
+    "for index, row in df_review.iterrows():\n",
+    "    gmap_id = row['gmap_id']\n",
+    "    unique_words = set(row['tokennized_review'])\n",
+    "    for word in unique_words:\n",
+    "        if word not in word_in_business:\n",
+    "            word_in_business[word] = set()\n",
+    "        word_in_business[word].add(gmap_id)\n",
+    "\n",
+    "rare_words = [word for word, business_set in word_in_business.items()\n",
+    "                                if len(business_set) / total_businesses < 0.05]\n",
+    "\n",
+    "for index,row in df_review.iterrows():\n",
+    "    rared_tokens = [w for w in row['tokennized_review'] if w not in rare_words]\n",
+    "    df_review.at[index, \"tokennized_review\"] = rared_tokens\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Bigram words\n",
     "all_tokens = sum(df_review[\"tokennized_review\"], [])\n",
     "bigram_measures = nltk.collocations.BigramAssocMeasures()\n",
@@ -463,8 +540,15 @@
     "for index, row in df_review.iterrows():\n",
     "    mwe_tokens = tokenizer.tokenize(row[\"tokennized_review\"])\n",
     "    df_review.at[index, \"tokennized_review\"] = mwe_tokens  \n",
-    "# print(df_review.head())\n",
-    "\n",
+    "# print(df_review.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Export word count txt file\n",
     "all_tokens = sum(df_review[\"tokennized_review\"], [])\n",
     "all_tokens_per_doc = [token for token in df_review[\"tokennized_review\"]]\n",
@@ -475,36 +559,6 @@
     "    for index,word in enumerate(sorted_unique_vocab):\n",
     "        file.write(f\"{word}:{index}\\n\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "ZqZos1q6lDEf"
-   },
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "OPBNTTq6lDEg"
-   },
-   "outputs": [],
-   "source": [
-    "#Remove"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -556,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 93,
    "metadata": {
     "id": "sgFFtm6qlDEg"
    },
