--- a/notebook_templates/task2_xxxxxxx.ipynb
+++ b/notebook_templates/task2_xxxxxxx.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 120,
    "metadata": {
     "id": "qgmGWs8HlDEW"
    },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 121,
    "metadata": {
     "id": "bPCuEl8smTHW"
    },
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 122,
    "metadata": {
     "id": "YsnRR2c4lDEc"
    },
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,6 +428,7 @@
     "with open(r'Student Data/stopwords_en.txt', 'r') as file:\n",
     "    for line in file:\n",
     "        stopwords_list.append(line.strip())\n",
+    "df_review[\"tokennized_review\"] = None\n",
     "for index,row in df_review.iterrows():\n",
     "    # Tokenization\n",
     "    review_text = row[\"review_text\"]\n",
@@ -459,12 +460,17 @@
     "4.Task e finished: Used list comprehension to  filter out the tokens to be length longer than3\n",
     "Justification: Words's Lenth less than 3 are always meanningless words. Remove than at the beginning can help improve efficency of data processing.\n",
     "5.Task b1 finishied: Used list comprehension to filter the unigram_tokens by word not in the stop_word list.\n",
-    "Justification: To"
+    "Justification: Stop words are considered noise that needs to be removed. Remove them before stemmatization, because if the stopwords are stemmed first, the words would be transformed that not being able to match the stopword list.\n",
+    "5.Stemming the remaining tokens to their root forms using the Porter Stemmer.\n",
+    "Justification: \n",
+    "\n",
+    "\n",
+    "Explanation on result:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {
     "id": "OPBNTTq6lDEg"
    },
@@ -495,13 +501,14 @@
    "metadata": {},
    "source": [
     "1.Identifying and removing context-dependent stopwords, which are words that appear in more than 95% of businesses.\n",
-    "Justification: This step should be done before the stemming because \n",
-    "2.Stemming the remaining tokens to their root forms using the Porter Stemmer."
+    "Justification: For example: \"The words \"restaurant\" and \"restaurants\" are treated separately. \"Restaurant\" might appear in 80% of reviews, and \"restaurants\" in 20%. Individually, neither might exceed a frequency threshold (like 95%). Thus, neither is removed as a context-dependent stopword.\n",
+    "\n",
+    "Explanation on result:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 128,
    "metadata": {
     "id": "sgFFtm6qlDEg"
    },
