--- a/notebook_templates/task2_xxxxxxx.ipynb
+++ b/notebook_templates/task2_xxxxxxx.ipynb
@@ -453,17 +453,16 @@
     "id": "ZqZos1q6lDEf"
    },
    "source": [
-    "1.Read the stopwords txt and append them to a list called stopwords_lis\n",
-    "2.Iterate through the rows of df_reviews\n",
-    "3.Task a finished: Tokenize the review_text of each row by RegexpTokenizer\n",
+    "1. Read the stopwords txt and append them to a list called stopwords_lis\n",
+    "2. Iterate through the rows of df_reviews\n",
+    "3. Task a finished: Tokenize the review_text of each row by RegexpTokenizer\n",
     "Justification: To perform further processing like remove stop words, Stemmentization etc, Words need to be tokenized first.\n",
-    "4.Task e finished: Used list comprehension to  filter out the tokens to be length longer than3\n",
+    "4. Task e finished: Used list comprehension to  filter out the tokens to be length longer than3\n",
     "Justification: Words's Lenth less than 3 are always meanningless words. Remove than at the beginning can help improve efficency of data processing.\n",
-    "5.Task b1 finishied: Used list comprehension to filter the unigram_tokens by word not in the stop_word list.\n",
+    "5. Task b1 finishied: Used list comprehension to filter the unigram_tokens by word not in the stop_word list.\n",
     "Justification: Stop words are considered noise that needs to be removed. Remove them before stemmatization, because if the stopwords are stemmed first, the words would be transformed that not being able to match the stopword list.\n",
-    "5.Stemming the remaining tokens to their root forms using the Porter Stemmer.\n",
-    "Justification: \n",
-    "\n",
+    "6. Stemming the remaining tokens to their root forms using the Porter Stemmer.\n",
+    "Justification: To identify context dependent stopwords, words need to be stemmed before removing them\n",
     "\n",
     "Explanation on result:"
    ]
@@ -533,6 +532,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. The purpose of this code is to remove rare words from the tokenized reviews. Rare words are defined as those that appear in less than 5% of the businesses in the dataset.\n",
+    "Justification: This step should be done after stemmatization. For example,\"running,\" \"ran,\" and \"runs\" all stem to \"run.\" If rare word removal were done before stemming, each form would be treated as a separate entity, potentially missing the fact that collectively they might not be rare."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 126,
    "metadata": {},
@@ -548,6 +555,15 @@
     "    mwe_tokens = tokenizer.tokenize(row[\"tokennized_review\"])\n",
     "    df_review.at[index, \"tokennized_review\"] = mwe_tokens  \n",
     "# print(df_review.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Used MWETokenizer with pmi to find the first 200 bigrams and iterate through each row to identify the bigram and add bigram to it.\n",
+    "\n",
+    "Justification: "
    ]
   },
   {
@@ -617,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 129,
    "metadata": {
     "id": "sgFFtm6qlDEg"
    },
