--- a/notebook_templates/task2_xxxxxxx.ipynb
+++ b/notebook_templates/task2_xxxxxxx.ipynb
@@ -76,13 +76,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "bSr_kwKclDEV"
@@ -110,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 79,
    "metadata": {
     "id": "qgmGWs8HlDEW"
    },
@@ -154,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 80,
    "metadata": {
     "id": "bPCuEl8smTHW"
    },
@@ -278,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 81,
    "metadata": {
     "id": "YsnRR2c4lDEc"
    },
@@ -344,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 83,
    "metadata": {
     "id": "OPBNTTq6lDEg"
    },
@@ -437,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,31 +467,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'tokennized_review'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m~/Monash/FIT5196/Assignment1/FIT5198-Assignment-1-/.venv/lib/python3.11/site-packages/pandas/core/indexes/base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[0;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'tokennized_review'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[78], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Bigram words\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# Combine all tokenized reviews into a single list of words\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m all_tokens \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(\u001b[43mdf_review\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtokennized_review\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m, [])\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Set up bigram association measures and finder\u001b[39;00m\n\u001b[1;32m      6\u001b[0m bigram_measures \u001b[38;5;241m=\u001b[39m nltk\u001b[38;5;241m.\u001b[39mcollocations\u001b[38;5;241m.\u001b[39mBigramAssocMeasures()\n",
-      "File \u001b[0;32m~/Monash/FIT5196/Assignment1/FIT5198-Assignment-1-/.venv/lib/python3.11/site-packages/pandas/core/frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-      "File \u001b[0;32m~/Monash/FIT5196/Assignment1/FIT5198-Assignment-1-/.venv/lib/python3.11/site-packages/pandas/core/indexes/base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[1;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[1;32m   3810\u001b[0m     ):\n\u001b[1;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'tokennized_review'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Bigram words\n",
     "# Combine all tokenized reviews into a single list of words\n",
@@ -532,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,24 +532,13 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "NglwwiJRnPZd"
-   },
-   "source": [
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "    \n",
-    "### 4.2. Whatever else <a class=\"anchor\" name=\"whetev\"></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "collapsed": true,
     "id": "Ve6IZ2I-lDEg"
    },
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
     "    \n",
-    "### 4.3. Generate numerical representation<a class=\"anchor\" name=\"bigrams\"></a>"
+    "### 4.2. Generate numerical representation<a class=\"anchor\" name=\"bigrams\"></a>"
    ]
   },
   {
@@ -592,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 87,
    "metadata": {
     "id": "sgFFtm6qlDEg"
    },
@@ -621,9 +581,6 @@
     "\n",
     "# Create a dictionary mapping each word to its index in the vocabulary\n",
     "vocab_dist = {word: index for index, word in enumerate(vocab)}\n",
-    "with open(\"test_vocab.txt\",'w') as file:\n",
-    "    for index,word in enumerate(vocab_dist):\n",
-    "        file.write(f\"{word}:{ index}\\n\")\n",
     "\n",
     "print(vocab_dist)\n",
     "output_countvec = []\n",
@@ -686,17 +643,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"countvec_test.txt\",\"w\") as file:\n",
-    "    for line in output_countvec:\n",
-    "        file.write(line + \"\\n\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "wjMBqRetlDEl"
@@ -731,13 +677,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 89,
    "metadata": {
     "id": "Y6OUXHlxlDEm"
    },
    "outputs": [],
    "source": [
-    "#some code"
+    "with open(\"test_vocab.txt\",'w') as file:\n",
+    "    for index,word in enumerate(vocab_dist):\n",
+    "        file.write(f\"{word}:{ index}\\n\")"
    ]
   },
   {
@@ -762,13 +710,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 90,
    "metadata": {
     "id": "__n1fdIqlDEn"
    },
    "outputs": [],
    "source": [
-    "#some code"
+    "with open(\"countvec_test.txt\",\"w\") as file:\n",
+    "    for line in output_countvec:\n",
+    "        file.write(line + \"\\n\")"
    ]
   },
   {
